# rlansync

./: .gitignore  README.md
rlansync_client/: Cargo.toml
rlansync_client/src/: iohelper.rs  main.rs  scanner.rs
rlansync_client/src/iohelper/: datastore.rs
rlansync_ios/rlansync.xcodeproj/: project.pbxproj
rlansync_ios/rlansync.xcodeproj/xcshareddata/xcschemes/: rlansync_ios.xcscheme  rlansync_macos.xcscheme
rlansync_ios/rlansync_core/: DetailView.swift  GridItemView.swift  ItemDirectoryView.swift  ItemImageView.swift  ItemTextView.swift  ShareItem.swift  SimpleShareItem.swift  rlansync_core.h  rlansync_lib_helper.swift  rlansynclib.swift
rlansync_ios/rlansync_core/rlansync_core.docc/: rlansync_core.md
rlansync_ios/rlansync_ios/: ContentView.swift  ItemDirectoryView.swift  ItemImageView.swift  ItemTextView.swift  ShareItem.swift  rlansync_ios-Bridging-Header.h  rlansync_ios.entitlements  rlansync_iosApp.swift  rlansynclib.swift
rlansync_ios/rlansync_ios.xcodeproj/: project.pbxproj
rlansync_ios/rlansync_ios.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
rlansync_ios/rlansync_ios.xcodeproj/xcshareddata/xcschemes/: rlansync_ios.xcscheme
rlansync_ios/rlansync_macos/: ContentView.swift  rlansync_macosApp.swift
rlansync_ios/share/: README.md  ShareViewController.swift  share.entitlements
rlansync_lib/: Cargo.toml  Makefile  build-rust.sh  build.rs
rlansync_lib/src/: client.rs  database.rs  lib.rs  main.rs  mdns.rs  scanner.rs  server.rs  syncer.rs  utils.rs
rlansync_lib/src/database/: database_tests.rs
rlansync_lib/src/iohelper/: datastore.rs
rlansync_lib/src/protos/: example.proto  mod.rs
rlansync_lib/src/scanner/: scanner_tests.rs
rlansync_lib/src/server/: tests.rs
