[package]
name = "rlansync_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
ring = "0.17.0-alpha.11"
data-encoding = "2.3.2"
sqlite = "0.26.0"
machine-uid = "0.2.0"
simple-mdns = "0.3.9"
uuid = { version = "1.0.0", features = ["serde", "v4"] }