[package]
name = "rlansync_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
mdns-sd = "0.5.0"
gethostname = "0.2.3"
get_if_addrs = "0.5.3"
substring = "1.4.5"
libc = "0.2.126"
ring = "0.17.0-alpha.11"
data-encoding = "2.3.2"
protobuf = "3.0.3"

[build-dependencies]
protobuf-codegen = "3.0.3"

[lib]
crate-type = ["lib", "staticlib"]