[package]
name = "rlansync_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
mdns-sd = "0.5.0"
gethostname = "0.2.3"
get_if_addrs = "0.5.3"
substring = "1.4.5"
libc = "0.2.126"
# ring = "0.16.20"
data-encoding = "2.3.2"
protobuf = "3.0.3"
sha256 = "1.0.3"
# sqlite = "0.26.0"
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }

[build-dependencies]
protobuf-codegen = "3.0.3"

[lib]
crate-type = ["lib", "staticlib"]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"